--- a/opt-project.ipynb
+++ b/opt-project.ipynb
@@ -31,14 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
     "PORTFOLIOS = [\"EUROSTOXX_50\", \"FTSE_100\", \"MIBTEL_295\", \"SP_500\", \"NASDAQ\"] \n",
-    "\n",
-    "# Select portfolio\n",
-    "PORTFOLIO = PORTFOLIOS[3]\n",
+    "PORTFOLIO = PORTFOLIOS[3] #CHANGE\n",
     "RISK_AVERSION = 0.05\n",
     "ITERATIONS = 10"
    ]
@@ -352,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,15 +371,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 502 ms, sys: 170 ms, total: 672 ms\n",
-      "Wall time: 121 ms\n"
+      "CPU times: user 1.1 s, sys: 149 ms, total: 1.25 s\n",
+      "Wall time: 241 ms\n"
      ]
     },
     {
@@ -417,7 +415,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +431,6 @@
     "    w_t = get_min(grad)\n",
     "\n",
     "    # Condition\n",
-    "\n",
     "    w = w + alpha * (w_t - w)\n",
     "\n",
     "w\n",
