--- a/opt-project.ipynb
+++ b/opt-project.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "def portfolio_risk(weights, cov_matrix):\n",
     "    return np.sqrt(np.dot(weights.T, np.dot(cov_matrix, weights)))\n",
     "\n",
-    "# Function to minimize risk given a target return level\n",
+    "# Function to minimize risk given a target return  (Efficient frontier purpose)\n",
     "def minimize_risk(weights, mean_returns, cov_matrix, target_return):\n",
     "    constraints = ({'type': 'eq', 'fun': lambda x: portfolio_return(x, mean_returns) - target_return},\n",
     "                   {'type': 'eq', 'fun': lambda x: np.sum(x) - 1})\n",
