--- a/opt-project.ipynb
+++ b/opt-project.ipynb
@@ -864,13 +864,13 @@
     "        direction = d_fw\n",
     "        step_size = 1.0  # Frank-Wolfe step\n",
     "    else:\n",
-    "        #direction = -d_away\n",
-    "        #max_step_size = np.min(weights[weights > 0] / (weights[weights > 0] - v_j[weights > 0]))\n",
-    "        #step_size = min(1.0, max_step_size)  # Away step\n",
-    "        direction = d_away\n",
-    "        alpha_vt = weights[j]\n",
-    "        max_step_size = alpha_vt / (1 - alpha_vt)\n",
-    "        step_size = min(1.0, max_step_size)\n",
+    "        direction = -d_away\n",
+    "        max_step_size = np.min(weights[weights > 0] / (weights[weights > 0] - v_j[weights > 0]))\n",
+    "        step_size = min(1.0, max_step_size)  # Away step\n",
+    "        #direction = d_away\n",
+    "        #alpha_vt = weights[j]\n",
+    "        #max_step_size = alpha_vt / (1 - alpha_vt)\n",
+    "        #step_size = min(1.0, max_step_size)\n",
     "\n",
     "    # Store values for plotting\n",
     "    loss_values_aw.append(loss(weights, mean_returns, cov_matrix, RISK_AVERSION))\n",
